--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.7.240:9100','172.31.18.212:9100','172.31.1.176:9100',]
+    - targets: ['10.0.0.124:9100','10.0.0.199:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
