--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['10.0.0.124:9100','10.0.0.199:9100']
+    - targets: ['10.0.13.21:9100','10.0.139.66:9100','10.0.134.62:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
